--- a/006A_01_Übung/style.css
+++ b/006A_01_Übung/style.css
@@ -8,16 +8,50 @@
 }
 
 .box {
-  display: flex;
+  display: block;
 }
 
 .box1 {
-  position: fixed;
-  display: inline-flex;
-  width: 2vw;
-  height: 2vw;
-  right: 10vw;
-  top: 1vw;
+  position: relative;
+  top: 0vw;
+  left: 80vw;
+  width: 1vw;
+  height: 1.5vw;
   background-color: black;
-  margin: 5px;
+  padding: 0.5vw;
+  margin: 1vw;
+  display: inline-block;
+}
+
+.textbox {
+    position: relative;
+  width: 400px;
+  height: 300px;
+  background-color: rgba(128, 128, 128, 0.493);
+  margin: 20px;
+  padding: 20px;
+}
+
+.text{
+    position: relative;
+    top: 20px;
+
+}
+
+.innerbox{
+    position:absolute;
+    width: 100px;
+    height: 100px;
+    background-color: aqua;
+    bottom: 0px;
+    right: 0px;
+}
+
+.box3{
+    position: absolute;
+    background-color: aqua;
+    width: 50px;
+    height: 50px;
+    bottom: 0px;
+    right: 0px;
 }
